# RTCLI.Runtime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_vs2017.bat  gen_vs2019.bat  gen_xcode.sh  install.bat  install_ninja.bat
RTCLI/: Base.hpp  CMakeLists.txt  Config.hpp  PIL.hpp  RTCLI.cpp  RTCLI.hpp  Traits.hpp
RTCLI.AOT/: Array.h  Enum.h  RTCLI.cpp  String.h
RTCLI.AOT/Console/: Write.h
RTCLI.AOT/Internal/: Add.inl  Box.inl  Cgt.inl
RTCLI.AOT/Runtime/: Runtime.cpp
RTCLI.AOT/System.Private.CoreLib/: System.Private.CoreLib.sln
RTCLI.VM/System.Private.CoreLib/: System.Private.CoreLib.sln
RTCLI/CIL/: Code.h  OpCodes.h  StackBehaviour.h
RTCLI/CIL/Internal/: CIL.cpp  Code.h  StackBehaviour.h
RTCLI/PIL/: PIL.h
RTCLI/Runtime/: Array.h  Boolean.h  Delegate.h  Exception.h  ICloneable.h  IComparable.h  IConvertible.h  IEquatable.h  IFormatProvider.h  IL.h  Int.h  Nullable.h  Object.h  Single.h  String.h  Type.h  ValueType.h
RTCLI/Runtime/Console/: Write.h  WriteLine.h
RTCLI/Runtime/Internal/: Add.inl  Cgt.inl  Managed.inl  Nop.inl  Object.inl  Sub.inl  ValueType.inl
RTCLI/Runtime/TypeSystem/: ICustomAttributeProvider.h  MemberInfo.h  Type.h
RTCLI/Source/CIL/: CIL.cpp
RTCLI/Source/Runtime/: Console.cpp  Runtime.cpp
RTCLIDefault/: CoreDefault.cpp  CoreDefault.hpp  ILDefault.cpp  RTCLIDefault.cpp  RTCLIDefaultConfig.cmake.in
RTCLIStub/: CoreStub.cpp  CoreStub.hpp  RTCLIStub.cpp
Test/: CMakeLists.txt  README.md
Test/CIL/: CILTest.cpp  CMakeLists.txt
Test/CLICore/: CLICoreTest.cpp  CMakeLists.txt
Test/GeneratedCase0/: CMakeLists.txt  GeneratedCase0.cpp  TestSystem.cpp  TestSystem.h
Test/Null/: CMakeLists.txt  NullTest.cpp
Test/String/: CMakeLists.txt  StringTest.cpp
